--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.30.0",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "lucide-react": "^0.241.0",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
-    "query-string": "^8.1.0",
+    "@headlessui/react": "^1.7.18",
+    "autoprefixer": "10.4.19",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.368.0",
+    "next": "14.2.1",
+    "postcss": "8.4.38",
+    "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
-    "tailwind-merge": "^1.13.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
-    "zustand": "^4.3.8"
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "3.4.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2"
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.78",
+    "@types/react-dom": "18.2.25",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "typescript": "5.4.5",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.1"
   }
 }
